[package]
name = "brewers-lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.6.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.6.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
reqwest = { version = "0.11.11", default-features = false, features = [ "json", "rustls-tls" ] }
serde_json = "1.0.85"
axum = "0.6.0-rc.1"
hyper = "0.14.20"
tower-http = { version = "0.3.4", features = [ "compression-br", "compression-full", "cors" ] }
http = "0.2.8"
axum-aws-lambda = "0.2.0"
tower = "0.4.13"
time = "0.3.14"
